<resources>

    <!-- Common -->
    <string name="app_name">Courier</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="continue_">Continue</string>
    <string name="value_with_percentage">%1$s (%2$d%%)</string>

    <!-- Main -->
    <string name="main_title">Relaynet Courier</string>
    <string name="main_storage_usage">Data storage usage</string>
    <string name="main_storage_usage_values">%1$s used of %2$s max</string>
    <string name="main_low_storage">
        Your available storage is running low.
        The app might not be able to store new data to be exchanged.
    </string>
    <string name="main_deleted_expired_messages">%s of expired data has been deleted</string>

    <!-- Sync -->
    <string name="sync">Sync</string>
    <string name="sync_people">Sync with People</string>
    <string name="sync_internet">Sync with Internet</string>
    <string name="sync_people_disabled">
      You can only sync with people when you don’t have Internet connection.
    </string>
    <string name="sync_people_enabled">
      Press sync to exchange data with people without Internet connection.
    </string>
    <string name="sync_internet_enabled">
      Press sync to exchange data with Internet.
        You have data to send to the Internet and you may also have data to receive.
    </string>
    <string name="sync_internet_disabled_offline">
      You need a connection to exchange data with the Internet.
    </string>
    <string name="sync_internet_disabled_no_data">
      You don’t have data to exchange with the Internet. You need to sync with people first.
    </string>
    <string name="sync_internet_disabled_synced">
      You’re already synced with the Internet. You need to sync with people next.
    </string>

    <!-- States -->
    <string name="hotspot_on">Hotspot On</string>
    <string name="hotspot_off">Hotspot Off</string>
    <string name="internet_on">Online</string>

    <!-- Public / Internet Sync -->
    <string name="sync_delivering_cargo">Delivering data</string>
    <string name="sync_waiting">Waiting while the server processes data</string>
    <string name="sync_collecting_cargo">Collecting data</string>
    <string name="sync_finished">Sync complete</string>
    <string name="sync_error">An error occurred when syncing. Please try again.</string>
    <string name="sync_stop_confirm_title">Are you want to interrupt the sync?</string>
    <string name="sync_internet_stop_confirm_message">The sync hasn\'t finished yet.</string>

    <!-- Private / People Sync -->
    <string name="sync_people_starting">Setting up</string>
    <string name="sync_people_syncing">Syncing</string>
    <string name="sync_people_waiting_first_client">Waiting for the first person to connect</string>
    <string name="sync_people_syncing_some">Syncing with</string>
    <string name="sync_people_stop_confirm_message">Some people are syncing with your device at the moment.</string>

    <!-- Hotspot Instructions -->
    <string name="hotspot_instructions">Wi-Fi hotspot</string>
    <string name="hotspot_instructions_disabled">Wi-Fi hotspot is disabled</string>
    <string name="hotspot_instructions_disabled_text">
      Your Wi-Fi hotspot is disabled at the moment.
      You need to enable it in your device settings to be able to Sync with People.
    </string>
    <string name="hotspot_instructions_open_settings">Open Wi-Fi hotspot Settings</string>
    <string name="hotspot_instructions_enabled">Wi-Fi hotspot is enabled</string>
    <string name="hotspot_instructions_enabled_text">
      Your Wi-Fi hotspot is now enabled.\nYou can start the Sync with People.
    </string>
    <string name="hotspot_instructions_start_sync">Start to Sync</string>
    <string name="hotspot_instructions_stay_enabled">
        The Wi-Fi hotspot should stay enabled throughout the synchronization with people.
    </string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_manage_storage">Manage data storage</string>
    <string name="settings_select_max_storage">
        Select the maximum amount of data the app can use on your device.
    </string>
    <string name="settings_max_storage">Maximum app storage</string>
    <string name="settings_used_storage">Storage currently used by app</string>
    <string name="settings_available_storage">Available storage on device</string>
    <string name="settings_total_storage">Total storage on device</string>
    <string name="settings_clear_data">Clear all stored data</string>
    <string name="settings_clear_data_description">
        Deleting the data stored on your device will not lose anyone’s messages.
        Messages will be delivered by the next courier exchange.
    </string>
    <string name="settings_clear">Clear</string>
    <string name="settings_clear_dialog_title">Are you sure?</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="about_app">
        Relaynet is a computer network where apps can remain connected
        when the Internet is completely cut off.
    </string>
    <string name="about_open_licenses">See open source licenses</string>
    <string name="about_licenses">Open Source Licenses</string>

</resources>
