<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sync.people.HotspotInstructionsActivity">

    <include layout="@layout/common_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="48dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_icon_large"
            android:contentDescription="@null"
            android:padding="12dp"
            android:src="@drawable/ic_hotspot"
            app:backgroundTint="?colorPrimary"
            app:tint="?colorPrimary" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Courier.Title"
            android:textIsSelectable="true"
            tools:text="@string/hotspot_instructions_disabled" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Courier.Body2"
            android:textIsSelectable="true"
            tools:text="@string/hotspot_instructions_disabled_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/openSettings"
            style="@style/Widget.Courier.Button.Outline"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:text="@string/hotspot_instructions_open_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startSync"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:text="@string/hotspot_instructions_start_sync" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
