<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.sync.people.PeopleSyncActivity">

    <include layout="@layout/common_app_bar" />

    <ImageView
        android:id="@+id/animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:tint="?colorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sync_animation" />

    <LinearLayout
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/animation"
        app:layout_constraintEnd_toEndOf="@id/animation"
        app:layout_constraintStart_toStartOf="@id/animation"
        app:layout_constraintTop_toTopOf="@id/animation">

        <TextView
            android:id="@+id/syncMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textIsSelectable="true"
            tools:text="Syncing with" />

        <TextView
            android:id="@+id/waitingFirstClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sync_people_waiting_first_client"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/clientsConnected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textIsSelectable="true"
            android:textSize="64sp"
            android:visibility="gone"
            tools:text="2"
            tools:visibility="visible" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop"
        style="?materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/close"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
